adjustments in home page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,7 @@
     "classNames",
     "containerClassName"
   ],
-  "i18n-ally.sourceLanguage": "en-us",
+  "i18n-ally.sourceLanguage": "es-es",
   "i18n-ally.displayLanguage": "en-us",
   "i18n-ally.localesPaths": ["src/data/i18n"],
   "i18n-ally.enabledFrameworks": ["general", "react", "next-intl"],
