--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "@next/mdx": "^14.0.4",
     "@normy/react-query": "^0.13.0",
     "@planetscale/database": "^1.13.0",
+    "@portabletext/react": "^3.0.11",
     "@preact/signals-core": "^1.5.1",
     "@preact/signals-react": "^2.0.0",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -129,6 +130,8 @@
     "@react-rxjs/core": "^0.10.7",
     "@react-rxjs/utils": "^0.9.7",
     "@redux-devtools/extension": "^3.3.0",
+    "@sanity/client": "^6.11.1",
+    "@sanity/image-url": "^1.0.2",
     "@storybook/nextjs": "8.0.0-alpha.9",
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.3.0",
@@ -169,11 +172,13 @@
     "axios": "^1.6.5",
     "browserslist": "^4.22.2",
     "class-variance-authority": "^0.7.0",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
     "cookies-next": "^4.1.0",
     "cropperjs": "^1.6.1",
     "dat.gui": "^0.7.9",
+    "date-fns": "^3.2.0",
     "dayjs": "^1.11.10",
     "drizzle-orm": "^0.29.3",
     "drizzle-zod": "^0.5.1",
@@ -196,6 +201,8 @@
     "next-auth": "4.24.5",
     "next-international": "^1.2.3",
     "next-intl": "3.4.2",
+    "next-sanity": "^7.0.10",
+    "next-sanity-image": "^6.1.1",
     "next-themes": "^0.2.1",
     "next-usequerystate": "^1.14.1",
     "nextjs-google-analytics": "^2.3.3",
