--- a/package.json
+++ b/package.json
@@ -220,6 +220,7 @@
     "react-icons": "^5.0.1",
     "react-lag-radar": "^1.0.0",
     "react-medium-image-zoom": "^5.1.9",
+    "react-player": "^2.14.1",
     "react-wrap-balancer": "^1.1.0",
     "reflect-metadata": "^0.2.1",
     "remark-gfm": "^4.0.0",
