--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 #===========================================
 # 🔴 REQUIRED
 #===========================================
-
+DEV_DEMO_NOTES=true
 # planetscale (https://planetscale.com) | neon (https://neon.tech)
 # vercel (https://vercel.com) | railway (https://railway.app)
 NEXT_PUBLIC_DB_PROVIDER="planetscale"
